Bug 336853 - "Save As..." generates an non-UTF-8 enconded file
Summary: "Save As..." generates an non-UTF-8 enconded file
Status: RESOLVED FIXED
Alias: None
Product: kfind
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-29 02:01 UTC by André Marcelo Alvarenga
Modified: 2014-07-21 19:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.0
Sentry Crash Report:


Attachments
Screenshot (27.53 KB, image/png)
2014-06-29 02:02 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-06-29 02:01:12 UTC
When a file is saved with "Save As..." button, the result is a non-UTF-8 enconded file.

See screenshot.

If I insert the line as described below, the file opens correctly.

<html> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> <head>

Reproducible: Always

Actual Results:  
non-UTF-8 enconded file

Expected Results:  
UTF-8 enconded file
Comment 1 André Marcelo Alvarenga 2014-06-29 02:02:37 UTC
Created attachment 87468 [details]
Screenshot
Comment 2 Christoph Feck 2014-07-21 19:13:35 UTC
Git commit a7828a3b86c73726afee44d56f021e74bef78938 by Christoph Feck.
Committed on 21/07/2014 at 19:10.
Pushed by cfeck into branch 'KDE/4.14'.

Indicate used text encoding in generated HTML file

Thanks André!
FIXED-IN: 4.14.0

M  +2    -0    kfind/kfindtreeview.cpp

http://commits.kde.org/kde-baseapps/a7828a3b86c73726afee44d56f021e74bef78938