Indicate used text encoding in generated HTML file

Thanks André!

BUG: 336853
FIXED-IN: 4.14.0